[package]
name = "firestore_grpc"
version = "0.205.0"
authors = ["Konosuke Kachi <github@s.k-kachi.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gkkachi/firestore-grpc"
documentation = "https://gkkachi.github.io/firestore-grpc"
description = """
A gRPC client library for Firestore, generated automatically from the API definition files in Google APIs.
"""
keywords = ["firebase", "firestore", "grpc", "gcp"]

[lib]

[dependencies]
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
prost = "0.9"
prost-types = "0.9"

[build-dependencies]
tonic-build = "0.6"
